[package]
name = "fuels-example-predicates"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }
description = "Fuel Rust SDK predicate examples."

[dev-dependencies]
fuels = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }
