[package]
name = "fuels-example-rust-bindings"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["Fuel Labs <contact@fuel.sh>"]
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuels-rs"
description = "Fuel Rust SDK examples for Rust-native bindings"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuels = { version = "0.19.0", path = "../../packages/fuels" }
fuels-abigen-macro = { version = "0.19.0", path = "../../packages/fuels-abigen-macro" }
proc-macro2 = "1.0"
rand = "0.8"
tokio = { version = "1.10", features = ["full"] }
