[package]
name = "fuels-example-rust-bindings"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }
description = "Fuel Rust SDK examples for Rust-native bindings"

[dev-dependencies]
fuels = { workspace = true }
fuels-macros = { workspace = true }
proc-macro2 = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }
