[package]
name = "fuels-example-types"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }
description = "Fuel Rust SDK types examples."

[dev-dependencies]
fuels = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }
