[package]
name = "fuels-example-wallets"
publish = false
version = "0.0.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuels-rs"
description = "Fuel Rust SDK wallet examples."

[dependencies]
fuels = { version = "0.27.0", path = "../../packages/fuels" }
rand = "0.8.5"
tokio = { version = "1.10", features = ["full"] }
