[package]
name = "fuels-example-wallets"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }
description = "Fuel Rust SDK wallet examples."

[dev-dependencies]
fuels = { workspace = true, features = ["default", "accounts-keystore"] }
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }
