[package]
name = "build-test-projects"
description = "Runs `forc build` for all projects under the main test suite"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
termcolor = "1.1"
tokio = { version = "1.21.2", features = ["process", "macros", "rt", "rt-multi-thread"] }
futures-util ="0.3.24"
