[package]
name = "change-log"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
regex = { workspace = true }
dotenv = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
octocrab = { workspace = true, features = ["default"] }
