[package]
name = "change-log"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
dotenv = { workspace = true }
octocrab = { workspace = true, features = ["default"] }
regex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
