[package]
name = "check-docs"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = "1.0.75"
itertools = { workspace = true }
regex = { workspace = true }
