[package]
name = "check-docs"
version = "v0.61.0"
authors = [" Ali sher"]
edition = "2024"
homepage = "https://github.com/freelancer5728"
license = "Null"
publish = false
repository = "https://github.com/freelancer5728/fuels-rs"
rust-version = "1.54.0"

[dependencies]
anyhow = "1.0.75"
itertools = "0.10.0"  # Update with the desired version
regex = "1.5.4"        # Update with the desired version
