[package]
name = "checks"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
clap = { workspace = true, features = ["default", "derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
anyhow = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
itertools = { workspace = true, features = ["use_alloc"] }
colored = { workspace = true }
duct = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
