[package]
name = "checks"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
clap = { workspace = true, features = ["default", "derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
anyhow = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
itertools = { workspace = true, features = ["use_std"] }
tokio-util = { workspace = true }
nix = { workspace = true, features = ["process", "signal"] }
colored = { workspace = true }
duct = { workspace = true }
regex = { workspace = true, features = ["std", "unicode-perl"] }
sha2 = { workspace = true, features = ["std"] }
hex = { workspace = true, features = ["std"] }

[dev-dependencies]
rand = { workspace = true, features = ["std", "std_rng"] }
tempfile = { workspace = true }
thiserror = { workspace = true }
pretty_assertions = { workspace = true, features = ["std"] }
