[package]
name = "checks"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false

build = "build.rs"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["default", "derive"] }
colored = { workspace = true }
duct = { workspace = true }
hex = { workspace = true, features = ["std"] }
itertools = { workspace = true, features = ["use_std"] }
nix = { workspace = true, features = ["process", "signal"] }
regex = { workspace = true, features = ["std", "unicode-perl"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
sha2 = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true, features = ["std"] }
rand = { workspace = true, features = ["std", "std_rng"] }
tempfile = { workspace = true }

[build-dependencies]
itertools = { workspace = true, features = ["use_alloc"] }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true, features = ["parse"] }
